feat(api): create api teams
